quete1/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: toto
spec:
  replicas: 3
  selector:
    matchLabels:
      app: toto
  template:
    metadata:
      labels:
        app: toto
    spec:
      containers:
      - name: toto
        image: ttl.sh/hello-mthomassin:24h
