quete1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: toto
spec:
  selector:
    app: toto
  ports:
  - port: 80
    targetPort: 5000
